# SDL3-Template-Project

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  clock.h  color.h  concept.h  exception.h  input.h  output.h  rec2.h  renderer.h  sound.h  subsystem.h  vec2.h  window.h
src/: application.cpp  input.cpp  main.cpp  renderer.cpp  window.cpp
